Bug 292081 - JJ: Label about info at opendesktop.org is truncated
Summary: JJ: Label about info at opendesktop.org is truncated
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-01-20 23:55 UTC by Alexander Potashev
Modified: 2012-06-25 13:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments
screenshot (41.38 KB, image/png)
2012-01-20 23:55 UTC, Alexander Potashev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2012-01-20 23:55:18 UTC
Created attachment 68059 [details]
screenshot

Version:           2.4-GIT (using Devel) 
OS:                Linux

 

Reproducible: Always

Steps to Reproduce:
In Amarok, open the Help menu -> About Amarok -> Donors tab.

Actual Results:  
The text "Get data from openDesktop.org to learn more about our generous donors" is truncated if the "About Amarok" dialog box is not wide enough.

Expected Results:  
The line can be wrapped, so that the whole text is always visible.
Comment 1 Myriam Schweingruber 2012-01-21 14:28:37 UTC
Do you really still use Amarok 2.4-git? The branch has changed to 2.5-git now.
Comment 2 Alexander Potashev 2012-01-21 19:43:01 UTC
I did. But the bug report is still valid for Amarok 2.5.0.
Comment 3 Myriam Schweingruber 2012-02-29 10:57:43 UTC
Thank you for the feedback.
Comment 4 Teo Mrnjavac 2012-03-01 12:08:07 UTC
This is easy enough for a junior job.
Comment 5 Lachlan 2012-04-01 23:11:42 UTC
Fix posted at https://git.reviewboard.kde.org/r/104464/
Comment 6 Sven Krohlas 2012-06-25 13:48:36 UTC
Git commit d1d26c90d1ae2c716267af425698fee06aa131dd by Sven Krohlas.
Committed on 25/06/2012 at 15:42.
Pushed by krohlas into branch 'master'.

fix JJ: Label about info at opendesktop.org is truncated

Patch by Lachlan Dufton <dufton@gmail.com>
FIXED-IN:2.6
CCMAIL:dufton@gmail.com
REVIEW:104464

M  +25   -2    src/aboutdialog/AnimatedBarWidget.cpp
M  +2    -0    src/aboutdialog/AnimatedBarWidget.h

http://commits.kde.org/amarok/d1d26c90d1ae2c716267af425698fee06aa131dd