fix JJ: Label about info at opendesktop.org is truncated

Patch by Lachlan Dufton <dufton@gmail.com>

BUG:292081
FIXED-IN:2.6
CCMAIL:dufton@gmail.com
REVIEW:104464