src/aboutdialog/AnimatedBarWidget.h
@@ -1,5 +1,6 @@
 /****************************************************************************************
  * Copyright (c) 2009 Téo Mrnjavac <teo@kde.org>                                        *
+ * Copyright (c) 2012 Lachlan Dufton <dufton@gmail.com>                                 *
  *                                                                                      *
  * This program is free software; you can redistribute it and/or modify it under        *
  * the terms of the GNU General Public License as published by the Free Software        *
@@ -32,6 +33,7 @@ public:
     bool isAnimating() const { return m_animating; }
 
     virtual QSize sizeHint() const;
+    virtual int heightForWidth(int w) const;
 
 public slots:
     void animate();
